# deep_learning

./: .gitignore  mbmlbook.ipynb  pyproject.toml  requriements.txt
assign/avathon/: anomaly_detection.pkl  app.py  assignment.ipynb
assign/deliveroo/: rgr_analysis.ipynb
assign/emphasis/: best_autoencoder.pth  model_training.ipynb  sae.py  sae_model.pth  szvav_analysis.ipynb  test.py
assign/sigmoid/: ds_process.md
gpu_setup/: setup_gpu_for_training_ml.md  test_tensorflow_gpu.py
kaggle/competitions/home-data-for-ml-course/: 2_data_preproc.ipynb  3_modelling.ipynb  data_description.txt  house_price_prediction_eda.ipynb  utils.py
kaggle/deep_learn_course/: pytorch_model_building.ipynb  pytorch_tensors.ipynb  redwine-quality_model.ipynb
learn/: attention_transformer.ipynb  cnn.ipynb  gnn.ipynb  llm_agents.ipynb
learn/cs231n/assignment1/: knn.ipynb
learn/cs231n/assignment1/cs231n/classifiers/: k_nearest_neighbor.py
learn/nlp/: 01_micrograd.ipynb  02_bigram_model.ipynb  min-char-rnn.py  mlp_bengio.ipynb  readme.md  rnn.ipynb
learn/nlp/03_activations_grads_batchnorms/: exercise01.ipynb  exercise02.ipynb  lecture_part01.ipynb  lecture_part02.ipynb
learn/nlp/04_backprop/: lecture_become_backprop_ninja.ipynb
