[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12.8"
dependencies = [
    "absl-py==2.2.2",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "comm==0.2.2",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "executing==2.2.0",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "fonttools==4.58.0",
    "fsspec==2025.3.2",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.71.0",
    "h5py==3.13.0",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==9.2.0",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.7",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-widgets==3.0.15",
    "keras==3.9.2",
    "kiwisolver==1.4.8",
    "libclang==18.1.1",
    "markdown==3.8",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.1",
    "mpmath==1.3.0",
    "namex==0.0.9",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.1.3",
    "opt-einsum==3.4.0",
    "optree==0.15.0",
    "packaging==25.0",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "prompt-toolkit==3.0.51",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==26.4.0",
    "requests==2.32.3",
    "rich==14.0.0",
    "scikit-learn>=1.7.1",
    "setuptools==80.7.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.19.0",
    "termcolor==3.1.0",
    "torch==2.7.0",
    "torch-geometric>=2.6.1",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
    "tornado==6.5",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "urllib3==2.4.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "widgetsnbextension==4.0.14",
    "wrapt==1.17.2",
]
